# SEA-Webb

./: .gitignore  CONTRIBUTING.md  Makefile  PBS Structural Engineer App.txt  README.md  pyproject.toml  requirements.txt  run_workbench.bat
cursor_prompts/: 00_run_order.txt  01_block_2_planning_prompt.txt  02_repo_workflow_and_governance_prompt.txt  03_project_persistence_prompt.txt  04_tree_expansion_and_state_prompt.txt  05_document_ingestion_prompt.txt  06_document_retrieval_and_citation_prompt.txt  07_branch_comparison_v1_prompt.txt  08_validation_and_integration_prompt.txt
docs/: 00_product_definition.md  01_architecture_v1.md  02_master_data_model.md  03_mvp_scope.md  04_block_2_implementation_plan.md  05_block_2_validation_report.md  06_block_3_implementation_plan.md  07_block_3_acceptance_snapshot.md  08_block_3_validation_report.md  09_block_4a_implementation_plan.md  10_block_4a_acceptance_snapshot.md  11_product_rebaseline_local_ai_chat_first.md  12_revised_execution_order_after_rebaseline.md  13_document_governance_and_active_truth_rebaseline.md  14_detailed_revised_execution_order_with_governed_knowledge.md  CHANGELOG.md  FAIL_LOG.md  TEST_STRATEGY.md
examples/: example_project.json
schemas/: active_knowledge_projection.schema.json  alternative.schema.json  assumption_record.schema.json  branch.schema.json  calculation.schema.json  check.schema.json  decision.schema.json  derived_knowledge_bundle.schema.json  document.schema.json  document_corpus_assessment.schema.json  document_fragment.schema.json  document_governance_index.schema.json  (+10 more)
(+162 files in other folders)
