[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-tree-app-foundation"
version = "0.1.0"
description = "Local-first structural design decision-tree core (foundation)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22",
  "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
