[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-tree-app-foundation"
version = "0.1.0"
description = "Local-first structural design decision-tree core (foundation)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22",
  "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
workbench = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
structural_tree_app = [
  "workbench/templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
